# CACO

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/corpus/: __init__.py  analyze.py  find.py
app/static/css/: index.css
app/static/fonts/noto/: README.txt
app/templates/: analyze.html  find.html  index.html
download/: freq.csv  sample.txt
post/: analyze.py  find.py
src/: combine.py  divide.py  freq.py  process.py  segment.py  slice.py
