[tool.poetry]
name = "caco"
version = "0.1.0"
description = "Contemporary Amharic Corpus: Automatically Morpho-Syntactically Tagged Amharic Corpus"
authors = ["q9i <46249765+quantum9Innovation@users.noreply.github.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
hornmorphoa = {path = "dist/HornMorphoA-4.3-py3-none-any.whl"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
